using LinkedList instead of ArrayList
Is this necessary